[package]
name = "spaeter-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
serde-json-core = { version = "0.5.1", features = ["custom-error-messages"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
signal-detector = { path = "../signal-detector" }
glam = { version = "0.24.2", default-features = false, features = ["serde"] }
toml = { version = "0.8.6", optional = true }

[features]
default = ["std", "config"]
std = ["glam/std"]
config = ["dep:toml"]
