[package]
name = "spaeter-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking", "jpeg"] }
bevy-inspector-egui = "0.21.0"
bevy_flycam = "0.12.0"
rumqttc = { version = "0.23.0", features = ["url"] }
spaeter-core = { path = "../core"}
tokio = { version = "1.0", features = ["sync"] }
