[package]
name = "spaeter-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.12.3"
tokio = { version = "1.33.0", features = ["full"] }
spaeter-core = { path = "../core"}
futures-util = "0.3.29"
