[package]
name = "signal-detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
libm = "0.2.8"
microfft = "0.5.1"
num-complex = { version = "0.4.4", default-features = false, features = ["libm"] }

[dev-dependencies]
rand = "0.8.5"
