[package]
name = "timing-conversions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.5"
fugit = "0.3.7"
heapless = "0.8.0"
fixed = "1.24.0"
libm = "0.2.8"
statime = { git = "https://github.com/pendulum-project/statime.git", default-features = false }

[dev-dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"